Trying to merge_small_durations

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0a25650",
+   "id": "418e90e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44eb143c",
+   "id": "ed30ca8e",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d7883c6b",
+   "id": "91ea4e16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:12:08.730142Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2e430f25",
+   "id": "a82f325c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "abf20096",
+   "id": "21800d17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a05c6866",
+   "id": "4218b902",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3c018991",
+   "id": "1598e222",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d1bf3995",
+   "id": "695e6a45",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4422b47c",
+   "id": "d5fcac7c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "07e8c5c3",
+   "id": "3bb16684",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b46baad5",
+   "id": "5f6d0b04",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d02df8",
+   "id": "bce2457b",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b2d86f06",
+   "id": "c3f244d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T17:55:32.470847Z",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc11dbda",
+   "id": "f0062b4d",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6b257280",
+   "id": "8295a92b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:05:50.245191Z",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c0e60e",
+   "id": "59edc403",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "05299808",
+   "id": "305c0fbe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:07:53.975151Z",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8678c7c6",
+   "id": "032021d2",
    "metadata": {},
    "source": [
     "looping through the `silence_mid` to find the neasest value to each of our splitting points\n",
@@ -712,12 +712,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "b143ffc9",
+   "execution_count": 61,
+   "id": "76bece78",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T18:17:21.746087Z",
-     "start_time": "2022-03-17T18:17:21.738109Z"
+     "end_time": "2022-03-17T20:12:11.155156Z",
+     "start_time": "2022-03-17T20:12:11.100804Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440.502857"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From this post:\n",
+    "#     https://stackoverflow.com/a/64582429/5820024\n",
+    "end_time = float(ffmpeg.probe(src)['format']['duration'])\n",
+    "end_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "038eb663",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T20:23:05.190585Z",
+     "start_time": "2022-03-17T20:23:05.177620Z"
     }
    },
    "outputs": [
@@ -727,20 +756,20 @@
        "array([ 60, 120, 180, 240, 300, 360, 420])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "split_interval, file_interval = 60, 441\n",
-    "split_arr = np.arange(split_interval, file_interval, split_interval)\n",
+    "split_interval = 60\n",
+    "split_arr = np.arange(split_interval, int(end_time), split_interval)\n",
     "split_arr"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "712a0383",
+   "id": "e88b77fd",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -749,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e3b7f3ac",
+   "id": "cf8cca2e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:19:16.601393Z",
@@ -779,30 +808,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "b64dd287",
+   "execution_count": 53,
+   "id": "512a3de9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-17T18:37:12.488644Z",
-     "start_time": "2022-03-17T18:37:12.469697Z"
+     "end_time": "2022-03-17T19:58:26.114834Z",
+     "start_time": "2022-03-17T19:58:26.094859Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[53.2015355] 0\n",
-      "[53.2015355, 115.09360299999999] 1\n",
-      "[53.2015355, 115.09360299999999, 174.648544] 2\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247] 3\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247] 4\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383] 5\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465] 6\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465, 421.5824465] 6\n",
-      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 247.038247, 354.971383, 421.5824465, 421.5824465, 424.6579205] 6\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -810,14 +824,12 @@
        " 115.09360299999999,\n",
        " 174.648544,\n",
        " 247.038247,\n",
-       " 247.038247,\n",
        " 354.971383,\n",
-       " 421.5824465,\n",
-       " 421.5824465,\n",
-       " 424.6579205]"
+       " 381.905991,\n",
+       " 421.5824465]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,20 +845,270 @@
     "        # compare which item is closer to our suggested split time\n",
     "        prev_silence = silence_mid[j-1]\n",
     "        if silence_time-split_arr[i] > split_arr[i] - prev_silence:\n",
-    "            success_array.append(prev_silence)\n",
+    "            if prev_silence not in success_array:\n",
+    "                success_array.append(prev_silence)\n",
+    "            else:\n",
+    "                success_array.append(silence_time)\n",
     "        else:\n",
     "            success_array.append(silence_time)\n",
     "        # move to the next time in the split_arr\n",
-    "        print(success_array, i)\n",
     "        if i< len(split_arr)-1:\n",
     "            i +=1\n",
+    "        else:\n",
+    "            break\n",
     "success_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faa77d19",
+   "metadata": {},
+   "source": [
+    "Getting the difference between each two intervals, to get the lengths of split files\n",
+    "1. add zero before the array\n",
+    "1. add the lenght of the mp3 file after the array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "f503eb65",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T20:30:04.727269Z",
+     "start_time": "2022-03-17T20:30:04.710314Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 53.2015355,\n",
+       " 115.09360299999999,\n",
+       " 174.648544,\n",
+       " 247.038247,\n",
+       " 354.971383,\n",
+       " 381.905991,\n",
+       " 421.5824465,\n",
+       " 440.502857]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dur_array= [0] + success_array+[end_time]\n",
+    "# dur_array= success_array+[end_time]\n",
+    "dur_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a07f6642",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T20:30:57.705476Z",
+     "start_time": "2022-03-17T20:30:57.692511Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 53.2015355,  61.8920675,  59.554941 ,  72.389703 , 107.933136 ,\n",
+       "        26.934608 ,  39.6764555,  18.9204105])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difference_array = np.diff(np.array(dur_array))\n",
+    "difference_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed96c3f9",
+   "metadata": {},
+   "source": [
+    "### Merging small parts\n",
+    "Small part is considdered small if it is less than `x` seconds\n",
+    "\n",
+    "The small part should be merged to the next part, so that the sum does not exceeds `y` seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "86504736",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:05:10.648582Z",
+     "start_time": "2022-03-17T21:05:10.637586Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(48.0, 150.0)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_duration = 0.8 * split_interval\n",
+    "max_duration = 2.5 * split_interval\n",
+    "min_duration, max_duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "fb117e98",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:18:19.766735Z",
+     "start_time": "2022-03-17T21:18:19.751779Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.2015355,\n",
+       " 61.89206749999999,\n",
+       " 59.554941,\n",
+       " 72.38970300000003,\n",
+       " 107.93313599999999,\n",
+       " 66.6110635]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check each element for the forward round\n",
+    "def merge_small_durations(diff_arr, min_dur, max_dur):\n",
+    "    dur_array_forward = []\n",
+    "    flag_raised=False # the flag will be raised if we merges occur\n",
+    "    for i, dur in enumerate(diff_arr):\n",
+    "        if flag_raised: \n",
+    "            flag_raised=False\n",
+    "            continue\n",
+    "        if (dur < min_dur) & (dur > 0):\n",
+    "            if i + 1 < len(diff_arr):\n",
+    "                next_diff = diff_arr[i + 1]\n",
+    "#                 if next_diff==0:\n",
+    "#                     next_diff = diff_arr[i + 2]\n",
+    "                if dur + next_diff < max_dur:\n",
+    "                    # dur_array_forward.append(0)\n",
+    "                    dur_array_forward.append(dur + next_diff)\n",
+    "                    flag_raised=True\n",
+    "        else:\n",
+    "            dur_array_forward.append(dur)\n",
+    "    return dur_array_forward\n",
+    "\n",
+    "\n",
+    "fwd_arr = merge_small_durations(difference_array, min_duration, max_duration)\n",
+    "fwd_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "20e764f7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:18:28.474353Z",
+     "start_time": "2022-03-17T21:18:28.455377Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.2015355,\n",
+       " 61.89206749999999,\n",
+       " 59.554941,\n",
+       " 72.38970300000003,\n",
+       " 107.93313599999999,\n",
+       " 66.6110635]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bwd_arr = merge_small_durations(fwd_arr[::-1], min_duration,\n",
+    "                                max_duration)[::-1]\n",
+    "bwd_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "b78e45f8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:18:40.614760Z",
+     "start_time": "2022-03-17T21:18:40.578856Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383, 381.905991, 421.5824465]\n",
+      "[ 53.2015355  61.8920675  59.554941   72.389703  107.933136   26.934608\n",
+      "  39.6764555  18.9204105]\n",
+      "[53.2015355, 61.89206749999999, 59.554941, 72.38970300000003, 107.93313599999999, 66.6110635]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(53.2015355, 53.2015355),\n",
+       " (115.09360299999999, 61.89206749999999),\n",
+       " (174.648544, 59.554941),\n",
+       " (247.038247, 72.38970300000003),\n",
+       " (354.971383, 107.93313599999999),\n",
+       " (381.905991, 66.6110635)]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting the modified success_array\n",
+    "print(success_array)\n",
+    "print(difference_array)\n",
+    "print(bwd_arr)\n",
+    "\n",
+    "list(zip(success_array, bwd_arr))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea2838a",
+   "id": "f0f491b6",
    "metadata": {},
    "outputs": [],
    "source": []
