Finding the final stops values

--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "418e90e2",
+   "id": "cb31301d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed30ca8e",
+   "id": "87f38e19",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "91ea4e16",
+   "id": "5a6f4a4f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:12:08.730142Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a82f325c",
+   "id": "2af549af",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21800d17",
+   "id": "47206727",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4218b902",
+   "id": "d26ba9a3",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1598e222",
+   "id": "50029b73",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "695e6a45",
+   "id": "21b36d18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5fcac7c",
+   "id": "cf11f15c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3bb16684",
+   "id": "aeb9d80a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5f6d0b04",
+   "id": "9ab7e8ec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce2457b",
+   "id": "e8f32870",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c3f244d0",
+   "id": "22932292",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T17:55:32.470847Z",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0062b4d",
+   "id": "635020e2",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8295a92b",
+   "id": "a423a16d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:05:50.245191Z",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59edc403",
+   "id": "9ed8f791",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "305c0fbe",
+   "id": "94b746a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:07:53.975151Z",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032021d2",
+   "id": "cbeaaa5b",
    "metadata": {},
    "source": [
     "looping through the `silence_mid` to find the neasest value to each of our splitting points\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "76bece78",
+   "id": "41e4bf27",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:12:11.155156Z",
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "038eb663",
+   "id": "7697bda9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:23:05.190585Z",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e88b77fd",
+   "id": "ec44911a",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "cf8cca2e",
+   "id": "0cc5b7ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:19:16.601393Z",
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "512a3de9",
+   "id": "af8869a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T19:58:26.114834Z",
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa77d19",
+   "id": "8d44739d",
    "metadata": {},
    "source": [
     "Getting the difference between each two intervals, to get the lengths of split files\n",
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f503eb65",
+   "id": "77d5c703",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:04.727269Z",
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "a07f6642",
+   "id": "4aecb8a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:57.705476Z",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed96c3f9",
+   "id": "8f4ea64e",
    "metadata": {},
    "source": [
     "### Merging small parts\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "86504736",
+   "id": "8f296c60",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:05:10.648582Z",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "fb117e98",
+   "id": "dce25d8c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:19.766735Z",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "20e764f7",
+   "id": "f84efda1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:28.474353Z",
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "b78e45f8",
+   "id": "9d51f933",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:40.614760Z",
@@ -1107,8 +1107,215 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "id": "1a9a7493",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:39:03.980250Z",
+     "start_time": "2022-03-17T21:39:03.971274Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def merge_small_durations(diff_arr, min_dur, max_dur, fwd=True):\n",
+    "    dur_arr_mod = []\n",
+    "    flag_raised = False  # the flag will be raised if we merges occur\n",
+    "    for i, dur in enumerate(diff_arr):\n",
+    "        if flag_raised:\n",
+    "            flag_raised = False\n",
+    "            continue\n",
+    "        if (dur < min_dur) & (dur > 0):\n",
+    "            # if dur < min_dur:\n",
+    "            if i + 1 < len(diff_arr):\n",
+    "                next_diff = diff_arr[i + 1]\n",
+    "                if dur + next_diff < max_dur:\n",
+    "                    if fwd: dur_arr_mod.append(0)\n",
+    "                    dur_arr_mod.append(dur + next_diff)\n",
+    "                    if not fwd: dur_arr_mod.append(0)\n",
+    "                    flag_raised = True\n",
+    "            else:\n",
+    "                dur_arr_mod.append(dur)\n",
+    "        else:\n",
+    "            dur_arr_mod.append(dur)\n",
+    "    return dur_arr_mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "fb121eba",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:43:20.670265Z",
+     "start_time": "2022-03-17T21:43:20.664281Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 [53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383, 381.905991, 421.5824465]\n",
+      "9 [0, 53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383, 381.905991, 421.5824465, 440.502857]\n",
+      "8 [53.2015355, 61.89206749999999, 59.554941, 72.38970300000003, 107.93313599999999, 26.93460799999997, 39.67645550000003, 18.920410500000003]\n",
+      "8 [53.2015355, 61.89206749999999, 59.554941, 72.38970300000003, 107.93313599999999, 0, 66.6110635, 18.920410500000003]\n",
+      "8 [53.2015355, 61.89206749999999, 59.554941, 72.38970300000003, 107.93313599999999, 0, 0, 85.531474]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fwd_arr = merge_small_durations(difference_array, min_duration, max_duration)\n",
+    "\n",
+    "bwd_arr = merge_small_durations(fwd_arr[::-1],\n",
+    "                                min_duration,\n",
+    "                                max_duration,\n",
+    "                                fwd=False)[::-1]\n",
+    "\n",
+    "# getting the modified success_array\n",
+    "for ary in [success_array, dur_array, list(difference_array), fwd_arr, bwd_arr]:\n",
+    "    print(len(ary), ary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fea2946",
+   "metadata": {},
+   "source": [
+    "`[53.2015355, 61.89206749, 59.554941, 72.389703, 107.9331359, 26.93460797, 39.67645550, 18.920410500]\n",
+    "\n",
+    "[53.2015355, 61.89206749999999, 59.554941, 72.38970300000003, 107.93313599999999, 0, 0, 85.531474]\n",
+    "\n",
+    "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383, 381.905991, 421.5824465, 440.502857]\n",
+    "\n",
+    "[0, 53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383, 381.905991, 421.5824465, 440.502857]`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "63fd47ae",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:50:53.506677Z",
+     "start_time": "2022-03-17T21:50:53.499697Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(53.2015355, 53.2015355, 53.2015355),\n",
+       " (115.09360299999999, 61.89206749999999, 61.89206749999999),\n",
+       " (174.648544, 59.554941, 59.554941),\n",
+       " (247.038247, 72.38970300000003, 72.38970300000003),\n",
+       " (354.971383, 107.93313599999999, 107.93313599999999),\n",
+       " (381.905991, 26.93460799999997, 0),\n",
+       " (421.5824465, 39.67645550000003, 0),\n",
+       " (440.502857, 18.920410500000003, 85.531474)]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(dur_array[1:], list(difference_array), bwd_arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "f9fd2d0c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:54:03.109870Z",
+     "start_time": "2022-03-17T21:54:03.101891Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.2015355,\n",
+       " 115.09360299999999,\n",
+       " 174.648544,\n",
+       " 247.038247,\n",
+       " 354.971383,\n",
+       " 440.502857]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_stops = [x for i, x in enumerate(dur_array[1:]) if bwd_arr[i]!=0]\n",
+    "final_stops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "8b9063e4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T21:55:23.952568Z",
+     "start_time": "2022-03-17T21:55:23.938606Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.2015355, 115.09360299999999, 174.648544, 247.038247, 354.971383]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove the last element as it is the file length\n",
+    "\n",
+    "final_stops = final_stops[:-1]\n",
+    "final_stops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "c1ea2cba",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-17T22:03:34.033308Z",
+     "start_time": "2022-03-17T22:03:34.014385Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[53.202, 61.892, 59.555, 72.39, 107.933, 85.531]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_durations = list(\n",
+    "    np.round(np.diff(np.array([0] + final_stops + [end_time])), 3))\n",
+    "final_durations"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f0f491b6",
+   "id": "d0a643d8",
    "metadata": {},
    "outputs": [],
    "source": []
