--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb31301d",
+   "id": "e8d1df09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:29.719053Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87f38e19",
+   "id": "ae0e655e",
    "metadata": {},
    "source": [
     "Collecting ffmpeg-python\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5a6f4a4f",
+   "id": "d4c424d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:12:08.730142Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2af549af",
+   "id": "314f5602",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:55:48.339786Z",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "47206727",
+   "id": "f898c72e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T04:58:32.445693Z",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d26ba9a3",
+   "id": "ffa691ee",
    "metadata": {},
    "source": [
     "### Finding silence and intervals, from this post\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "50029b73",
+   "id": "6afbc3ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:11:20.064001Z",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "21b36d18",
+   "id": "494551b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:20:08.507528Z",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf11f15c",
+   "id": "daea950b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T05:13:31.045131Z",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aeb9d80a",
+   "id": "6d1553a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:30.128457Z",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9ab7e8ec",
+   "id": "1304d55c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T03:58:49.303513Z",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f32870",
+   "id": "1e49a50a",
    "metadata": {},
    "source": [
     "It appears that there are 3 lines at the end of outputs that are not related to `silencedetect` \n",
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "22932292",
+   "id": "f898ae1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T17:55:32.470847Z",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "635020e2",
+   "id": "229a0769",
    "metadata": {},
    "source": [
     "## Splitting\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a423a16d",
+   "id": "120b1866",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:05:50.245191Z",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed8f791",
+   "id": "54aaf3b4",
    "metadata": {},
    "source": [
     "We need to split at the middle of the silence period,\n",
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "94b746a6",
+   "id": "908c796a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:07:53.975151Z",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbeaaa5b",
+   "id": "3944f9de",
    "metadata": {},
    "source": [
     "looping through the `silence_mid` to find the neasest value to each of our splitting points\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "41e4bf27",
+   "id": "5bdb917b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:12:11.155156Z",
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7697bda9",
+   "id": "edc69798",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:23:05.190585Z",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec44911a",
+   "id": "04d3ba2f",
    "metadata": {},
    "source": [
     "getting an array of `silence_mid`"
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0cc5b7ca",
+   "id": "1b1f35c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T18:19:16.601393Z",
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "af8869a3",
+   "id": "103eddb2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T19:58:26.114834Z",
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d44739d",
+   "id": "50ff637d",
    "metadata": {},
    "source": [
     "Getting the difference between each two intervals, to get the lengths of split files\n",
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "77d5c703",
+   "id": "4ebcf0b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:04.727269Z",
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4aecb8a4",
+   "id": "7e554941",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T20:30:57.705476Z",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4ea64e",
+   "id": "a53ddf16",
    "metadata": {},
    "source": [
     "### Merging small parts\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8f296c60",
+   "id": "2dc7409e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:05:10.648582Z",
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "dce25d8c",
+   "id": "8d93d6ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:19.766735Z",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "f84efda1",
+   "id": "5c6008d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:28.474353Z",
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9d51f933",
+   "id": "49ed78ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:18:40.614760Z",
@@ -1108,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "1a9a7493",
+   "id": "e0f3434c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:39:03.980250Z",
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fb121eba",
+   "id": "4174c039",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:43:20.670265Z",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fea2946",
+   "id": "9b203126",
    "metadata": {},
    "source": [
     "`[53.2015355, 61.89206749, 59.554941, 72.389703, 107.9331359, 26.93460797, 39.67645550, 18.920410500]\n",
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "63fd47ae",
+   "id": "4f3ebfce",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:50:53.506677Z",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "f9fd2d0c",
+   "id": "fcf99b54",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:54:03.109870Z",
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "8b9063e4",
+   "id": "b555a64a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T21:55:23.952568Z",
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c1ea2cba",
+   "id": "be5e6fef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-17T22:03:34.033308Z",
@@ -1315,10 +1315,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a643d8",
+   "id": "29192c11",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# adding a function to round values of a list\n",
+    "def round_list_values(the_list, rounding=3):\n",
+    "    return list(np.round(the_list, rounding))"
+   ]
   }
  ],
  "metadata": {
